css/entry.css
.entries{
    position: absolute;
    padding-top: 10px;
    left: 0%;
    top: 0%;
    width: 100%;
    height: 100%;
}
.entry{
    transform-origin: top left;
    position: absolute;
}
.entry:hover{
    background-color: rgba(255,255,255,0.8);
}
@keyframes tiltOnHover {
    from {rotate: 0deg;
    }
    to {rotate: 5deg;
    }
}
.tiltable:hover{
    animation-name: tiltOnHover;
    animation-duration: 0.2s;
    rotate: 5deg;
}
.entry-overlay{
    position: fixed;
    left: 0%;
    top: 0%;
    padding: 10px;
    width: 100vw;
    height: 100vh;
    background-color: rgba(229, 229, 229, 0.9);
    display: none;
    flex-direction: column;
    align-items: center;
}
.entry-overlay .title{
    color: #2a3e49;
    padding-top: 20px;
}
.entry-overlay .close-button{
    position: fixed;
    height: 1.5em;
    width: 1.5em;
    right: 0%;
    top: 0%;
    padding: 0.75em;
    margin: 0.75em;
    border-radius: 50%;
    background-color: rgba(255,255,255,0.75);
}
.entry-overlay .close-button:hover{
    background-color: rgba(255,255,255,1);
}
.entry-overlay .buffering{
    height: 50vh;
    display: flex;
    justify-content: center;
    align-items: center;
}
.entry-overlay .buffering svg{
    position: absolute;
    height: 5em;
    width: 5em;
    transform-origin: center;
    animation: bufferSpin 0.5s linear infinite;
}
@keyframes bufferSpin {
    0% {rotate: 0deg;
    }
    100% {rotate: 360deg;
    }
}
.entry-overlay .image{
    max-height: calc(77dvh);
    /* min-height: 57dvh; */
    max-width: 80vw;
}
.entry-overlay .caption{
    min-width: 400px;
    margin-top: 1em;
    margin-bottom: 2em;
    max-width: 40vw;
    /* max-height: 7em; */
    overflow-y: auto;
}
.entry-overlay p{
    color: #2a3e49;
    font-size: 1.25em;
}
.entry-overlay .caption .author b{
    white-space: initial;
}

